--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="main justify-content-center">
             <div class="mainpage">
                <h1 class="text-center">Happy Birthday</h1>
-               <h2 class="text-center">Raghuvanshi</h2>
+               <h2 class="text-center">Abhishek</h2>
             </div>
-         <button class="btn btn-lg" onclick="ontour()">Lets Go for Tour</button>
+         <button class="btn btn-lg" onclick="ontour()">Lets Go for Tour &rarr;</button>
         </div>
     </body>
 </html>
