--- a/lastpage.html
+++ b/lastpage.html
@@ -17,12 +17,11 @@
         <div id="card">
             <div id="card-inside">
               <div class="wrap">
-                <p>Hey,</p>
-                <p>“A wish for you on your birthday, whatever you ask may you receive, whatever you seek may you find, whatever you wish may it be fulfilled on your birthday and always. Happy birthday!</p>
-                <p>I will be there with you in your side whenever you seek me.
-                </p>
+                <p>Hey, My Dear Love</p>
+                <p>"A Great and Lovely wish for you on your Birthday. God complete your all wish and always gives you strength and courage to acheive every goal of your life. A lots of Love for you my love.Happy Birthday My Mickey Mouse!!!!"</p>
+                <p>I am always with you as a team and as your true friend.</p>
                 <p>always.</p>
-                <p>Enjoy your Day . Stay Blessed nd Happy . Keep Smiling :)</p>
+                <p>Enjoy Your Day . Stay Blessed And Happy . Keep Smiling My Love :)</p>
                 <center><h4>From</h4></center>
                 <p class="signed">Your Minnie</p>
               </div>
@@ -30,14 +29,16 @@
             <div id="card-front">
               <div class="wrap">
                 <h1>Happy Birthday!</h1><br>
-                <h2 class="text-center">My Dear Mickey Mouse</h2> <br>
-                <h3 class="text-center">Open this Card....Lots of Wishes waiting for you</h3>
+                <h2 class="text-center" style="color:#e9658d">Mickey Mouse</h2> <br>
               </div>
               <button id="open">&gt;</button>
               <button id="close">&lt;</button>
             </div>
           </div>
-        <button class="btn3 btn-lg" onclick="onhome()">Move to Home Page</button>
+          <div class="btnbox">
+            <button class="btn3 btn-lg align-items-start" onclick="ontour()">&larr; Back To Memory</button>
+            <button class="btn3 btn-lg" onclick="onhome()">Back To Home &#x2302;</button>
+        </div>
     <script>
     (function() {
     function $(id) {
